--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ gen/
 /.settings/org.eclipse.jdt.ui.prefs
 /.settings/org.eclipse.jdt.launching.prefs
 /.settings
+/kotlin_classes/cz/hudecekpetr/snowride
+/kotlin_classes/META-INF
